--- a/lab6/src/main/java/ui/ShapeUI.form
+++ b/lab6/src/main/java/ui/ShapeUI.form
@@ -22,7 +22,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="298b3" binding="panel1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="298b3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -141,7 +141,7 @@
                   <text value="Create Square"/>
                 </properties>
               </component>
-              <vspacer id="c883a">
+              <vspacer id="6f6">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -171,7 +171,7 @@
             <properties>
               <background color="-1"/>
             </properties>
-            <border type="line">
+            <border type="none">
               <font/>
               <color color="-4473925"/>
             </border>
