--- a/Coursework/src/main/java/ui/EditTodoList.form
+++ b/Coursework/src/main/java/ui/EditTodoList.form
@@ -53,27 +53,22 @@
                   </component>
                 </children>
               </grid>
-              <grid id="154b7" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <scrollpane id="95089">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="etched"/>
+                <border type="none"/>
                 <children>
                   <component id="fbc63" class="javax.swing.JList" binding="tasks">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="50"/>
-                      </grid>
-                    </constraints>
+                    <constraints/>
                     <properties>
                       <background color="-1"/>
                       <font size="14" style="0"/>
                     </properties>
                   </component>
                 </children>
-              </grid>
+              </scrollpane>
             </children>
           </grid>
           <grid id="424bc" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
